test: FunctionalApiTest
missing:
- functional_interface_annotation